@startuml fajar_e_maintenance

entity users {
  * nik VARCHAR(8) <<PK>>
  --
  * password VARCHAR(255)
  * fullname VARCHAR(50)
    department ENUM("EI1 ~ EI7");
    email_address VARCHAR(255)
    phone_number VARCHAR(15)
    work_center VARCHAR(25)
    remember_token VARCHAR(100)
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

entity user_role {
  * nik VARCHAR(8) <<PK>>
  * role VARCHAR(255) <<PK>>
  --
}

entity roles {
  * role VARCHAR(255) <<PK>>
  --
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

entity funclocs
{
  * id VARCHAR(50) <<PK>>
  --
    sort_field VARCHAR(50)
    created_at TIMESTAMP
    updated_at TIMESTAMP
}

entity motors
{
  * id VARCHAR(9) <<PK>>
  --
  * status ENUM(["Installed", "Repaired", "Available"])
    funcloc VARCHAR (50) <<FK>>
    sort_field VARCHAR(50)
    description VARCHAR(50)
    material_number VARCHAR(8)
  * unique_id VARCHAR(6) UNIQUE
  * qr_code_link VARCHAR(100) UNIQUE
    created_at TIMESTAMP NULL
    updated_at TIMESTAMP NULL
}

entity motor_details {
  * id BIGINT(20) UNSIGNED AUTO_INCREMENT
  --
  * motor_detail VARCHAR(9) <<FK>> UNIQUE
    manufacturer VARCHAR(50)
    serial_number VARCHAR(50)
    type VARCHAR(50)
    power_rate VARCHAR(50)
    power_unit ENUM(["kW", "HP"])
    voltage VARCHAR(50)
    electrical_current ENUM(["AC", "DC"])
    current_nominal VARCHAR(50)
    frequency VARCHAR(50)
    pole VARCHAR(50)
    rpm VARCHAR(50)
    bearing_de VARCHAR(50)
    bearing_nde VARCHAR(50)
    frame_type VARCHAR(50)
    shaft_diameter VARCHAR(50)
    phase_supply VARCHAR(50)
    cos_phi VARCHAR(50)
    efficiency VARCHAR(50)
    ip_rating VARCHAR(50)
    insulation_class VARCHAR(50)
    duty VARCHAR(50)
    connection_type VARCHAR(50)
    nipple_grease ENUM(["Available", "Not Available"])
    greasing_type VARCHAR(50)
    greasing_qty_de VARCHAR(50) 
    greasing_qty_nde VARCHAR(50)
    length VARCHAR(50)
    width VARCHAR(50)
    height VARCHAR(50) 
    weight VARCHAR(50)
    cooling_fan ENUM(["Internal", "External", "Not Available"])
    mounting ENUM("Horizontal", "Vertical", "V/H", "MGM") 
    created_at TIMESTAMP NULL
    updated_at TIMESTAMP NULL
}

entity motor_records {
  * id VARCHAR(255) <<PK>>
  --
  * funcloc VARCHAR (50)
  * motor VARCHAR(9)
  * sort_field VARCHAR(50)
    motor_status ENUM(["Running", "Not Running"])
    cleanliness ENUM(["Clean", "Dirty"])
    nipple_grease ENUM(["Available", "Not Available"])
    number_of_greasing UNSIGNED TINYINT(3) 0
    temperature_de DECIMAL(5,2) 0.00
    temperature_body DECIMAL(5,2) 0.00
    temperature_nde DECIMAL(5,2) 0.00    
    vibration_de_vertical_value DECIMAL(4,2) 0.00
    vibration_de_vertical_desc ENUM(["Good", "Satisfactory", "Unsatisfactory", "Unacceptable"]) 
    vibration_de_horizontal_value DECIMAL(4,2) 0.00
    vibration_de_horizontal_desc ENUM(["Good", "Satisfactory", "Unsatisfactory", "Unacceptable"]) 
    vibration_de_axial_value DECIMAL(4,2) 0.00
    vibration_de_axial_desc ENUM(["Good", "Satisfactory", "Unsatisfactory", "Unacceptable"])  
    vibration_de_frame_value DECIMAL(4,2) 0.00
    vibration_de_frame_desc ENUM(["Good", "Satisfactory", "Unsatisfactory", "Unacceptable"]) 
    noise_de ENUM(["Normal", "Abnormal"])
    vibration_nde_vertical_value DECIMAL(4,2) 0.00
    vibration_nde_vertical_desc ENUM(["Good", "Satisfactory", "Unsatisfactory", "Unacceptable"]) 
    vibration_nde_horizontal_value DECIMAL(4,2) 0.00
    vibration_nde_horizontal_desc ENUM(["Good", "Satisfactory", "Unsatisfactory", "Unacceptable"])   
    vibration_nde_frame_value DECIMAL(4,2) 0.00
    vibration_nde_frame_desc ENUM(["Good", "Satisfactory", "Unsatisfactory", "Unacceptable"])   
    noise_nde ENUM(["Normal", "Abnormal"])
    department VARCHAR(25)
  * nik VARCHAR(8)
    created_at TIMESTAMP NULL
    updated_at TIMESTAMP NULL
}

entity trafos {
  * id VARCHAR(9) <<PK>>
  --
  * status ENUM(["Installed", "Repaired", "Available"])
    funcloc VARCHAR (50) <<FK>>
    sort_field VARCHAR(50)
    description VARCHAR(50)
    material_number VARCHAR(8)
  * unique_id VARCHAR(6) UNIQUE
  * qr_code_link VARCHAR(100) UNIQUE
    created_at TIMESTAMP NULL
    updated_at TIMESTAMP NULL
}

entity trafo_details {
  * id BIGINT(20) UNSIGNED AUTO_INCREMENT
  --
  * trafo_detail VARCHAR(9) <<FK>>
    power_rate VARCHAR(50)
    power_unit ENUM(["VA", "kVA", "MVA"])
    primary_voltage VARCHAR(50)
    secondary_voltage VARCHAR(50)  
    primary_current VARCHAR(50)
    secondary_current VARCHAR(50)
    primary_connection_type VARCHAR(50)
    secondary_connection_type VARCHAR(50)
    frequency VARCHAR(50)
    type ENUM(["Step up", "Step down"])
    manufacturer VARCHAR(50)
    year_of_manufacture VARCHAR(4)
    serial_number VARCHAR(50)
    vector_group VARCHAR(50)
    insulation_class VARCHAR(50)
    type_of_cooling VARCHAR(50)
    temp_rise_oil_winding VARCHAR(50)
    weight VARCHAR(50)
    weight_of_oil VARCHAR(50)
    oil_type VARCHAR(50)
    ip_rating VARCHAR(50)
    created_at TIMESTAMP NULL
    updated_at TIMESTAMP NULL
}

entity trafo_records {
  * id VARCHAR(255) <<PK>>
  --
  * funcloc VARCHAR (50)
  * trafo VARCHAR(9)
  * sort_field VARCHAR(50)
    trafo_status ENUM(["Online", "Offline"])
    primary_current_phase_r DECIMAL(7,2)
    primary_current_phase_s DECIMAL(7,2)
    primary_current_phase_t DECIMAL(7,2) 
    secondary_current_phase_r DECIMAL(7,2)
    secondary_current_phase_s DECIMAL(7,2)
    secondary_current_phase_t DECIMAL(7,2)
    primary_voltage DECIMAL(8,2)
    secondary_voltage DECIMAL(8,2)
    oil_temperature DECIMAL(5,2) 
    winding_temperature DECIMAL(5,2) 
    cleanliness ENUM(["Clean", "Dirty"])
    noise ENUM(["Normal", "Abnormal"])
    silica_gel(["Good", "Satisfactory", "Unsatisfactory", "Unacceptable"])
    earthing_connection (["No loose", "Loose"])
    oil_leakage (["No leaks", "Leaks"])
    oil_level UNISIGNED TINYINT(3)
    blower_condition (["Good", "Not good"])
    department VARCHAR(25)
  * nik VARCHAR(8)
    created_at TIMESTAMP NULL
    updated_at TIMESTAMP NULL
}

entity findings {
  * id VARCHAR(255) <<PK>>
  --
    area VARCHAR(20)
  * department ENUM("EI1 ~ EI7");
  * status ENUM(["Open", "Closed"])
    equipment VARCHAR(9)
    funcloc VARCHAR(50)
    notification CHAR(8)
    reporter VARCHAR(50)  
  * description TEXT
    image VARCHAR(20)
    created_at TIMESTAMP NULL
    updated_at TIMESTAMP NULL
}

entity documents {
  * id VARCHAR(255) <<PK>>
  --
  * title VARCHAR(50)
    area VARCHAR(20)
    department ENUM("EI1 ~ EI7");
    equipment VARCHAR(9)
    funcloc VARCHAR(50)
    uploaded_by VARCHAR(50)
  * attachment VARCHAR(255)
    created_at TIMESTAMP NULL
    updated_at TIMESTAMP NULL
}

entity pub_share {
  * id VARCHAR(255) <<PK>>
  --
  * title VARCHAR(255)
  * size VARCHAR(255)
  * nik VARCHAR(8) <<FK>>
  * attachment VARCHAR(255)
    created_at TIMESTAMP NULL
    created_at TIMESTAMP NULL
}
 
entity email_recipients {
  * email VARCHAR(255) <<PK>>
  --
    name VARCHAR(50)
    created_at TIMESTAMP NULL
    updated_at TIMESTAMP NULL
}
 
users ||--|{ pub_share : Have
users ||--|| email_recipients : Subscribe
users }|--|| user_role : Have
roles }|--|| user_role : Have

funclocs ||--o{ motors
funclocs ||--o{ motor_records : Have
motors ||--o{ motor_records : Have
motors ||--|| motor_details : Contain
motor_records ||--|| users : Include

funclocs ||--o{ trafos : Have
funclocs ||--o{ trafo_records : Have
trafos ||--o{ trafo_records : Have
trafos ||--|| trafo_details : Contain
trafo_records ||--|| users : Include

findings ||--|| users : Include
motor_records ||--o{ findings : Have
trafo_records ||--o{ findings : Have

motors ||--o{ documents : Have
trafos ||--o{ documents : Have

@enduml